# cbox

./: .gitignore  CMakeLists.txt  README.md  args.hpp  console.hpp  file.hpp  help.hpp  init.hpp  input.hpp  main.cpp  notice.hpp  package.json  setup.py  shell.hpp  system.hpp  version.hpp  version_class.hpp
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  linux.yml  windows.yml
cbox/: __about__.py  file.py  filename.py  main.py  path.py  test.py  version.py
module/: __about__.py  main.py
script/: fetch.js  fetch.py  fetch.ts
test/: CMakeLists.txt  comparison_version.cpp  fill_zero.cpp  is_option.cpp  options_check.cpp  tmp.cpp  yesno.cpp
